# fastorm

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  Makefile  README.md  cheap_orm_example.py  cheap_orm_test.py  copy_commit.sh  example.py  pyproject.toml  requirements.tests.txt  requirements.txt  run_tests.sh
fastorm/: README.md  __init__.py  cheap_orm.py  classes.py  compat.py  object.py  objects.py  query.py  syncronous.py  utils.py
fastorm/cheap_orm/: __init__.py
tests/: run_tests.py  test_create_table.py  test_create_table_online.py  test_delete_row.py  test_doctests.py  test_fastapi_openapi.py  test_from_row.py  test_get_fields.py  test_get_fields_references.py  test_get_fields_typehints.py  test_get_primary_keys_sql_fields.py  test_get_sql_fields.py  test_insert_row.py  test_insert_table.py  test_metaclass.py  test_reference_loops.py  test_reference_to_double_primary_key.py  test_reference_to_reference.py  test_select.py  test_select_row.py  test_select_table.py  test_table_metadata.py  test_table_references.py  test_timezones.py  test_update_row.py  test_update_table.py  test_using_pydantic_model.py
tests/tools_for_the_tests_of_fastorm/: TestRunner.py  __init__.py
