[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "fastorm"
author = "luckydonald"
author-email = "fastorm+code@luckydonald.de"
home-page = "https://github.com/luckydonald/fastorm"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
#    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
#    "Programming Language :: Python :: 3.8",
#    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
#    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
#    "Topic :: Internet :: WWW/HTTP",
]
requires = [
    "asyncpg",
    # "psycopg2-binary",
    #   ^--- needed for escaping defaults on CREATE TABLE statements.
    "luckydonald-utils>=0.83",
    "typeguard",
    "pydantic",
]
description-file = "README.md"
requires-python = ">=3.10.0"

[tool.flit.metadata.urls]
Documentation = "https://github.com/luckydonald/fastorm"

[tool.flit.metadata.requires-extra]
test = [
]
